# LQuake

./: CMakeLists.txt  mac-Info.plist  q3map.h  quake.cpp
quake-android/jni/: Android.mk
